[gd_scene load_steps=21 format=2]

[ext_resource path="res://SF1/Chapters/1/FieldLogicNode2.gd" type="Script" id=1]
[ext_resource path="res://SF1/Chapters/1/TargetSelectionLogicNodeRoot.gd" type="Script" id=2]
[ext_resource path="res://SF1/EnemiesAndBosses/Goblin/Goblin.tscn" type="PackedScene" id=3]
[ext_resource path="res://SF1/EnemiesAndBosses/RuneKnight/RuneKnight.tscn" type="PackedScene" id=4]
[ext_resource path="res://SF1/EnemiesAndBosses/Dark Dwarf/DarkDwarf.tscn" type="PackedScene" id=5]
[ext_resource path="res://General/Cursor.tscn" type="PackedScene" id=6]
[ext_resource path="res://SF1/Chapters/1/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Assets/CustomTileTerrainInformation.png" type="Texture" id=8]
[ext_resource path="res://SF1/Chapters/1/AncientsGate/AncientsGateTilemap.tscn" type="PackedScene" id=10]
[ext_resource path="res://SF1/Characters/Hans/Hans.tscn" type="PackedScene" id=11]
[ext_resource path="res://SF1/Chapters/1/Battle1.gd" type="Script" id=12]
[ext_resource path="res://SF1/Characters/Ken/Ken.tscn" type="PackedScene" id=13]
[ext_resource path="res://SF1/Characters/Luke/Luke.tscn" type="PackedScene" id=14]
[ext_resource path="res://SF1/Characters/Tao/Tao.tscn" type="PackedScene" id=15]
[ext_resource path="res://SF1/Characters/Lowe/Lowe.tscn" type="PackedScene" id=16]
[ext_resource path="res://General/BattleAttackAnimationPlayer/BattleAttackAnimationPlayer.tscn" type="PackedScene" id=18]
[ext_resource path="res://SF1/Characters/Max/Max.tscn" type="PackedScene" id=19]
[ext_resource path="res://SF1/TileSet_Resources/Original/12.tres" type="TileSet" id=20]

[sub_resource type="Animation" id=1]
resource_name = "RandomTileFlashing"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MovementTilesWrapperNode:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.25098, 0.25098, 0.25098, 1 ), Color( 0, 0, 0, 1 ), Color( 0.25098, 0.25098, 0.25098, 0.784314 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UseTargetTilesWrapperNode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.25098, 0.25098, 0.25098, 1 ), Color( 0, 0, 0, 1 ), Color( 0.25098, 0.25098, 0.25098, 0.784314 ) ]
}

[sub_resource type="TileSet" id=2]
0/name = "BlankTexture"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 24, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Ground0"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 24, 0, 24, 24 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Ground15"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 48, 0, 24, 24 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Ground30"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 72, 0, 24, 24 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Float0"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 96, 0, 24, 24 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Float15"
5/texture = ExtResource( 8 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 120, 0, 24, 24 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Float30"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 144, 0, 24, 24 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[node name="BattleOneRoot" type="Node2D"]
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="AncientsGateTilemapNode2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 308, 260 )

[node name="FieldLogicNode" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="MovementTilesWrapperNode" type="Node2D" parent="FieldLogicNode"]

[node name="ColorRect" type="ColorRect" parent="FieldLogicNode/MovementTilesWrapperNode"]
visible = false
margin_left = 123.0
margin_top = 359.0
margin_right = 251.0
margin_bottom = 474.0
color = Color( 0.882353, 0.882353, 0.882353, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="FieldLogicNode/MovementTilesWrapperNode"]
visible = false
margin_left = 160.0
margin_top = 372.0
margin_right = 288.0
margin_bottom = 487.0
color = Color( 1, 1, 1, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="FieldLogicNode/MovementTilesWrapperNode"]
visible = false
margin_left = 106.0
margin_top = 427.0
margin_right = 146.0
margin_bottom = 467.0
color = Color( 0.270588, 0.270588, 0.270588, 0.670588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseTargetTilesWrapperNode" type="Node2D" parent="FieldLogicNode"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="FieldLogicNode"]
anims/RandomTileFlashing = SubResource( 1 )

[node name="CursorRoot" parent="." instance=ExtResource( 6 )]
position = Vector2( 300, 444 )

[node name="Characters" type="Node2D" parent="."]
position = Vector2( 119, 0 )

[node name="MaxRoot" parent="Characters" instance=ExtResource( 19 )]
position = Vector2( 205, 420 )

[node name="HansRoot" parent="Characters" instance=ExtResource( 11 )]
position = Vector2( 181, 468 )

[node name="KenRoot" parent="Characters" instance=ExtResource( 13 )]
position = Vector2( 229, 420 )

[node name="LukeRoot" parent="Characters" instance=ExtResource( 14 )]
position = Vector2( 181, 444 )

[node name="TaoRoot" parent="Characters" instance=ExtResource( 15 )]
position = Vector2( 205, 444 )

[node name="LoweRoot" parent="Characters" instance=ExtResource( 16 )]
position = Vector2( 229, 444 )

[node name="Enemies" type="Node2D" parent="."]
position = Vector2( 119, 0 )

[node name="GoblinRoot4" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 85, 156 )
is_npc = true
battle_logic_script = "res://SF1/Chapters/1/EnemeyLogicTempDemo/TopLeftGoblin.gd"

[node name="GoblinRoot5" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 181, 180 )
is_npc = true
battle_logic_script = "res://SF1/Chapters/1/EnemeyLogicTempDemo/CenterLeftGoblin.gd"

[node name="GoblinRoot6" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 229, 228 )
is_npc = true
battle_logic_script = "res://SF1/Chapters/1/EnemeyLogicTempDemo/CenterRightGoblin.gd"

[node name="GoblinRoot9" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 277, 156 )
is_npc = true
battle_logic_script = "res://SF1/Chapters/1/EnemeyLogicTempDemo/TopRightLeftGoblin.gd"

[node name="GoblinRoot10" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 301, 156 )
is_npc = true
battle_logic_script = "res://SF1/Chapters/1/EnemeyLogicTempDemo/TopRightRightGoblin.gd"

[node name="RuneKnightRoot" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 205, 204 )
is_npc = true
battle_logic_script = "res://SF1/Chapters/1/EnemeyLogicTempDemo/RuneKnight.gd"

[node name="DarkDwarfRoot" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 229, 132 )
is_npc = true
battle_logic_script = "res://SF1/Chapters/1/EnemeyLogicTempDemo/RightDarkDwarf.gd"

[node name="DarkDwarfRoot2" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 157, 132 )
is_npc = true
battle_logic_script = "res://SF1/Chapters/1/EnemeyLogicTempDemo/LeftDarkDwarf.gd"

[node name="Pillars" type="TileMap" parent="."]
position = Vector2( 307, 260 )
z_index = 1
tile_set = ExtResource( 20 )
cell_size = Vector2( 4, 4 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -3276815, 0, 262170, -3276814, 0, 262171, -3276813, 0, 262172, -3276812, 0, 262173, -3276811, 0, 262174, -3276810, 0, 262175, -3342325, 0, 262170, -3342324, 0, 262171, -3342323, 0, 262172, -3342322, 0, 262173, -3342321, 0, 262174, -3342320, 0, 262175, -3211279, 0, 327706, -3211278, 0, 327707, -3211277, 0, 327708, -3211276, 0, 327709, -3211275, 0, 327710, -3211274, 0, 327711, -3276789, 0, 327706, -3276788, 0, 327707, -3276787, 0, 327708, -3276786, 0, 327709, -3276785, 0, 327710, -3276784, 0, 327711, -3145743, 0, 393242, -3145742, 0, 393243, -3145741, 0, 393244, -3145740, 0, 393245, -3145739, 0, 393246, -3145738, 0, 393247, -3211253, 0, 393242, -3211252, 0, 393243, -3211251, 0, 393244, -3211250, 0, 393245, -3211249, 0, 393246, -3211248, 0, 393247, -3080207, 0, 458778, -3080206, 0, 458779, -3080205, 0, 458780, -3080204, 0, 458781, -3080203, 0, 458782, -3080202, 0, 458783, -3145717, 0, 458778, -3145716, 0, 458779, -3145715, 0, 458780, -3145714, 0, 458781, -3145713, 0, 458782, -3145712, 0, 458783, -3014671, 0, 131102, -3014670, 0, 131103, -3014669, 536870912, 29, -3014668, 536870912, 28, -3014667, 536870912, 131103, -3014666, 536870912, 131102, -3080181, 0, 1572878, -3080180, 0, 1572879, -3080179, 0, 1572880, -3080178, 0, 1572881, -3080177, 0, 1572882, -3080176, 0, 1572883, -2949135, 0, 196638, -2949134, 0, 196639, -2949133, 536870912, 65565, -2949132, 536870912, 65564, -2949131, 536870912, 196639, -2949130, 536870912, 196638, -3014645, 0, 1638414, -3014644, 0, 1638415, -3014643, 0, 1638416, -3014642, 0, 1638417, -3014641, 0, 1638418, -3014640, 0, 1638419, -2883599, 0, 131102, -2883598, 0, 131103, -2883597, 536870912, 29, -2883596, 536870912, 28, -2883595, 536870912, 131103, -2883594, 536870912, 131102, -2949109, 0, 131102, -2949108, 0, 131103, -2949107, 536870912, 29, -2949106, 536870912, 28, -2949105, 536870912, 131103, -2949104, 536870912, 131102, -2818063, 0, 196638, -2818062, 0, 196639, -2818061, 536870912, 65565, -2818060, 536870912, 65564, -2818059, 536870912, 196639, -2818058, 536870912, 196638, -2883573, 0, 196638, -2883572, 0, 196639, -2883571, 536870912, 65565, -2883570, 536870912, 65564, -2883569, 536870912, 196639, -2883568, 536870912, 196638, -2752527, 0, 131102, -2752526, 0, 131103, -2752525, 536870912, 29, -2752524, 536870912, 28, -2752523, 536870912, 131103, -2752522, 536870912, 131102, -2818037, 0, 131102, -2818036, 0, 131103, -2818035, 536870912, 29, -2818034, 536870912, 28, -2818033, 536870912, 131103, -2818032, 536870912, 131102, -2686991, 0, 196638, -2686990, 0, 196639, -2686989, 536870912, 65565, -2686988, 536870912, 65564, -2686987, 536870912, 196639, -2686986, 536870912, 196638, -2752501, 0, 196638, -2752500, 0, 196639, -2752499, 536870912, 65565, -2752498, 536870912, 65564, -2752497, 536870912, 196639, -2752496, 536870912, 196638, -2621455, 0, 1572878, -2621454, 0, 1572879, -2621453, 0, 1572880, -2621452, 0, 1572881, -2621451, 0, 1572882, -2621450, 0, 1572883, -2686965, 0, 1572878, -2686964, 0, 1572879, -2686963, 0, 1572880, -2686962, 0, 1572881, -2686961, 0, 1572882, -2686960, 0, 1572883, -2555919, 0, 1638414, -2555918, 0, 1638415, -2555917, 0, 1638416, -2555916, 0, 1638417, -2555915, 0, 1638418, -2555914, 0, 1638419, -2621429, 0, 1638414, -2621428, 0, 1638415, -2621427, 0, 1638416, -2621426, 0, 1638417, -2621425, 0, 1638418, -2621424, 0, 1638419, -2490383, 0, 26, -2490382, 0, 27, -2490381, 536870912, 29, -2490380, 536870912, 28, -2490379, 536870912, 27, -2490378, 536870912, 26, -2555893, 0, 26, -2555892, 0, 27, -2555891, 536870912, 29, -2555890, 536870912, 28, -2555889, 536870912, 27, -2555888, 536870912, 26, -2424847, 0, 65562, -2424846, 0, 65563, -2424845, 536870912, 65565, -2424844, 536870912, 65564, -2424843, 536870912, 65563, -2424842, 536870912, 65562, -2490357, 0, 65562, -2490356, 0, 65563, -2490355, 536870912, 65565, -2490354, 536870912, 65564, -2490353, 536870912, 65563, -2490352, 536870912, 65562, -2359311, 0, 131098, -2359310, 0, 131099, -2359309, 0, 131100, -2359308, 0, 131101, -2359307, 0, 524318, -2359306, 0, 524319, -2424821, 0, 131098, -2424820, 0, 131099, -2424819, 0, 131100, -2424818, 0, 131101, -2424817, 536870912, 131099, -2424816, 536870912, 131098, -2293775, 0, 196634, -2293774, 0, 196635, -2293773, 0, 196636, -2293772, 0, 196637, -2293771, 0, 589854, -2293770, 0, 589855, -2359285, 0, 196634, -2359284, 0, 196635, -2359283, 0, 196636, -2359282, 0, 196637, -2359281, 536870912, 196635, -2359280, 536870912, 196634 )

[node name="TileMapTileInformation" type="TileMap" parent="."]
position = Vector2( 119, 0 )
tile_set = SubResource( 2 )
cell_size = Vector2( 24, 24 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="BattleAttackAnimationPlayerRoot" parent="." instance=ExtResource( 18 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 324, 204 )
rotating = true
current = true
limit_left = 0
limit_top = 0
limit_right = 624
limit_bottom = 552
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
script = ExtResource( 7 )

[node name="CameraTween" type="Tween" parent="Camera2D"]

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_left = 128.367
margin_top = 305.647
margin_right = 266.367
margin_bottom = 404.647
color = Color( 0, 0, 0, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.184314, 0.0901961, 0.0901961, 1 )

[node name="TargetSelectionLogicNodeRoot" type="Node" parent="."]
script = ExtResource( 2 )
